k8s/manifests/sg-decoding/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgdecoding
  labels:
    name: sgdecoding
