k8s/manifests/sg-decoding/templates/argo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sgdecoding
  namespace: default
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}  # Pause indefinitely until manually promoted
      - setWeight: 40
      - pause: { duration: 10m }  # Pause for 10 minutes
      - setWeight: 60
      - pause: { duration: 10m }
      - setWeight: 80
      - pause: { duration: 10m }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sgdecoding
  template:
    metadata:
      labels:
        app: sgdecoding
    spec:
      containers:
      - name: sgdecoding
        image: "ghcr.io/aajb13/sgd-backend:163"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080  # Replace with the actual port your app listens on
