k8s/manifests/sg-decoding/templates/deployment.yaml
---
# Source: sg-decoding/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sg-decoding-api
  namespace: sgdecoding
  labels:
    helm.sh/chart: sg-decoding-1.0.0
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations: 
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
      app.kubernetes.io/name: sg-decoding
      app.kubernetes.io/instance: sgdecoding
  template:
    metadata:
      labels:
        component: api
        app.kubernetes.io/name: sg-decoding
        app.kubernetes.io/instance: sgdecoding
    spec:
      imagePullSecrets:
        - name: github-cr
      containers:
        - name: sg-decoding-api
          image: "ghcr.io/aajb13/sgd-backend:128"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 2000
              protocol: TCP
              name: http
            - containerPort: 8080
              protocol: TCP
              name: ws
            - containerPort: 8081
              protocol: TCP
              name: http1
          readinessProbe:
           httpGet:
               path: /
               port: 2000
           initialDelaySeconds: 10
           periodSeconds: 10
           timeoutSeconds: 3
           successThreshold: 1
           failureThreshold: 5
          livenessProbe:
           httpGet:
             path: /
             port: 2000
           initialDelaySeconds: 10
           periodSeconds: 10
           timeoutSeconds: 3
           successThreshold: 1
           failureThreshold: 5
          resources: 
            limits:
              memory: 2Gi
            requests:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            []
      volumes:
        []
---
# Source: sg-decoding/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sg-decoding-web
  namespace: sgdecoding
  labels:
    helm.sh/chart: sg-decoding-1.0.0
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
      app.kubernetes.io/name: sg-decoding
      app.kubernetes.io/instance: sgdecoding
  template:
    metadata:
      labels:
        component: web
        app.kubernetes.io/name: sg-decoding
        app.kubernetes.io/instance: sgdecoding
    spec:
      imagePullSecrets:
        - name: github-cr
      containers:
        - name: sg-decoding-web
          image: "ghcr.io/aajb13/sgd-frontend:128"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
                path: /
                port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
          resources: 
            limits:
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 2Gi
          volumeMounts:
            []
      volumes:
        []
