k8s/manifests/sg-decoding/templates/argo-rollouts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app.kubernetes.io/name: argo-rollouts
