k8s/manifests/sg-decoding/templates/argocd-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/instance: argocd
spec:
  ports:
    - name: metrics
      port: 8082
      targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-server
