k8s/manifests/sg-decoding/templates/service.yaml
---
# Source: sg-decoding/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
  namespace: sgdecoding
  labels:
    helm.sh/chart: sg-decoding-1.0.0
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    component: web
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding

---
# Source: sg-decoding/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
  namespace: sgdecoding
  labels:
    helm.sh/chart: sg-decoding-1.0.0
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    component: web
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
---
# Source: sg-decoding/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sg-decoding-api
  namespace: sgdecoding
  labels:
    helm.sh/chart: sg-decoding-1.0.0
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
    app.kubernetes.io/version: "1.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 2000
      targetPort: 2000
      protocol: TCP
      name: http
    - port: 8080  # Add this port for metrics
      targetPort: 8080
      protocol: TCP
      name: metrics
  selector:
    component: api
    app.kubernetes.io/name: sg-decoding
    app.kubernetes.io/instance: sgdecoding
