k8s/manifests/sg-decoding/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"  # Enable canary
    nginx.ingress.kubernetes.io/canary-weight: "10"  # Send 10% of traffic to canary
  name: sg-decoding-api-canary
  namespace: sgdecoding
spec:
  ingressClassName: "nginx"
  rules:
    - host: sgdecoding-api.speechlab.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sg-decoding-api-canary  # Canary service
                port:
                  number: 2000
  tls:
    - hosts:
      - sgdecoding-api.speechlab.sg
      secretName: sgdecoding-api-tls
